# rust-storage-streamer

./: .gitignore  Cargo.toml  README.md  flake.nix  nixos-module.nix
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  measure.rs
crates/discord/: Cargo.toml
crates/discord-host/: Cargo.toml  README.md
crates/discord-host/src/: config.rs  main.rs  upload-test.html
crates/discord-store/: Cargo.toml
crates/discord-store/src/: client.rs  download.rs  lib.rs  registry.rs  upload.rs  webhook.rs
crates/discord/src/: client.rs  lib.rs  ratelimit.rs  registry.rs  tests_mock.rs  webhook.rs
crates/file-router/: Cargo.toml  README.md
crates/file-router/migrations/: 0001_catalog.sql
crates/file-router/src/: catalog.rs  lib.rs
crates/files-cli/: Cargo.toml  README.md
crates/files-cli/src/: main.rs
crates/files-gateway/: Cargo.toml  README.md
crates/files-gateway/migrations/: 0001_catalog.sql
crates/files-gateway/src/: catalog.rs  lib.rs
crates/frame-streamer/: Cargo.toml  README.md
crates/frame-streamer/src/: byte.rs  frame.rs  lib.rs  memory.rs  request.rs  sizing.rs  stream.rs  upload.rs
crates/quota-engine/: Cargo.toml
crates/quota-engine/src/: cadence.rs  cadence_async.rs  lib.rs
crates/s3-gateway/: Cargo.toml  README.md
crates/s3-gateway/src/: auth.rs  catalog.rs  service.rs
crates/s3-host/: Cargo.toml  README.md
crates/s3-host/src/: main.rs
crates/s3-router/: Cargo.toml  README.md
crates/s3-router/migrations/: 0001_s3.sql
crates/s3-router/src/: lib.rs  service.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: catalog.rs  download.rs  lib.rs
crates/streamer-files-discord/: Cargo.toml  README.md
crates/streamer-files-discord/src/: config.rs  main.rs  upload-test.html
crates/streamer-s3-discord/: Cargo.toml  README.md
crates/streamer-s3-discord/src/: main.rs
src/: frame.rs  lib.rs  memory.rs  pacer.rs  planning.rs  request.rs  sizing.rs  stream.rs  window.rs
