[workspace]
resolver = "3"
members = ["crates/frame-streamer", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
frame-streamer = { path = "crates/frame-streamer" }
bytes = "1"
blake3 = "1"
aes-gcm = "0.10"
async-stream = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }

[profile.dev.package."*"]
opt-level = 3
