[workspace]
resolver = "3"
members = ["crates/frame-streamer", "crates/cli", "crates/file-router", "crates/discord", "crates/discord-host", "crates/s3-router", "crates/s3-host"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
frame-streamer = { path = "crates/frame-streamer" }
bytes = "1"
blake3 = "1"
aes-gcm = "0.10"
async-stream = "0.3"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
axum = "0.8"
http-body-util = "0.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio-stream = "0.1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
s3s = { version = "0.13", features = ["minio"] }
async-trait = "0.1"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"

[profile.dev.package."*"]
opt-level = 3
