[package]
name = "file-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
frame-streamer.workspace = true
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
