[package]
name = "frame-streamer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "frame_streamer"
path = "src/lib.rs"

[dependencies]
aes-gcm.workspace = true
async-stream.workspace = true
bytes.workspace = true
blake3.workspace = true
futures-util.workspace = true
tokio.workspace = true
