[package]
name = "s3-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
s3-router = { path = "../s3-router" }
discord = { path = "../discord" }
frame-streamer.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
axum.workspace = true
clap.workspace = true
s3s.workspace = true
rand.workspace = true
uuid.workspace = true
hex.workspace = true
