[package]
name = "s3-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frame-streamer.workspace = true
s3s.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rand.workspace = true
md-5.workspace = true
base64.workspace = true
hex.workspace = true
axum.workspace = true

[dev-dependencies]
http-body-util.workspace = true
